src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Freshbooks_Client_ID__c</fullName>
        <externalId>true</externalId>
        <label>Freshbooks Client ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Freshbooks_Email__c</fullName>
        <label>Freshbooks Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freshbooks_Notes__c</fullName>
        <label>Freshbooks Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>